# portfolio-report

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
daily-report/: .env.example  pyproject.toml  run_daily_report.sh
daily-report/pipeline/: data.py  news.py  run.py
mcp-server/: portfolio-example.csv  pyproject.toml  server.py
portfolio-core/: pyproject.toml
portfolio-core/portfolio/: alerts.py  portfolio.py  report.py  telegram.py  watchlist.py
portfolio-core/tests/: test_alerts.py  test_news.py  test_server.py  test_watchlist.py
researcher/: __main__.py  bot.py  config.py  pyproject.toml  scheduler.py
researcher/handlers/: chat.py  commands.py  interactive.py
researcher/infra/: telegram.py
researcher/interfaces/: ports.py
researcher/memory/: io.py  models.py
researcher/pipeline/: data.py  news.py
researcher/services/: agent_runner.py  memory_service.py  portfolio_service.py  transaction_log.py  workflow_deps.py
researcher/tests/: test_chat.py  test_commands.py  test_memory_io.py  test_news.py
researcher/tests/workflows/: test_daily_summary.py  test_midday.py
researcher/workflows/: daily_summary.py  midday.py  premarket.py  weekly_review.py
