[project]
name = "researcher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "portfolio-core",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "pydantic-ai>=0.4.0",
    "tavily-python>=0.5.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["researcher*"]

[tool.uv.sources]
portfolio-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23"]
